--- a/Index.html
+++ b/Index.html
@@ -22,7 +22,7 @@
                 </li>
                 <li>
                     <a href="">
-                        <img src="imagenes/fotoficial.jpg" alt="" width="65px" height="70px">
+                        <img src="fotoficial.jpg" alt="" width="65px" height="70px">
                     </a>
                 </li>
             </ul>
